# fire-image-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  constraints.txt  dvc.yaml  note.ipynb  pyproject.toml  scores.json  template.py
.github/workflows/: main_fireapp01.yml
research/: 01_data_ingestion.ipynb  02_base_model_development.ipynb  03_model_training_with_callbacks.ipynb  04_model_evaluation_with_mlflow.ipynb  05_prediction.ipynb  prepare_callbacks.ipynb
src/fire_image_classifier/: __init__.py  app.py  main.py  params.yaml
src/fire_image_classifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_trainer.py  prepare_base_model.py  prepare_callbacks.py
src/fire_image_classifier/conf/: config.yaml
src/fire_image_classifier/config/: configuration.py
src/fire_image_classifier/constants/: __init__.py
src/fire_image_classifier/entity/: config_entity.py
src/fire_image_classifier/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_trainer.py  stage_04_model_evaluation.py
src/fire_image_classifier/templates/: index.html
src/fire_image_classifier/utils/: common.py
